welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: Missing closing brace `}' assumed here
for ( x <- 1 to 7)
^Program:4: error: ';' expected but 'else' found.
else if {
^